DP-9337: fix weird body overflows too

--- a/assets/scss/03-organisms/_organization-navigation-item.scss
+++ b/assets/scss/03-organisms/_organization-navigation-item.scss
@@ -453,3 +453,7 @@
     fill: $c-theme-green;
   }
 }
+
+body {
+  -ms-overflow-style: none;
+}
